<resources>
    <string name="app_name">Stock Exchange</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_fragment_header">Stocks Change from pre close to current close</string>

    <string name="default_company_name">Crompton Greaves</string>
    <string name="default_stock_exchange">NSE</string>
    <string name="buy_quantity">Buy Qty:{0}</string>
    <string name="add_share">Add Share</string>
    <string name="sell_quantity">Sell Qty:{0}</string>
    <string name="default_price">0.00</string>
    <string name="default_price_change">0.00</string>
    <string name="default_percentage_change">0.00%</string>

    <string name="pre_close">Pre Cls: </string>
    <string name="open_price">Opn Prc: </string>
    <string name="per_change">Per Chg: </string>
    <string name="day_high">Day Hgh: </string>
    <string name="day_low">Day Low: </string>

    <string name="header_company">Company</string>
    <string name="header_price">Price</string>
    <string name="header_no_shares">No: of Shares</string>
    <string name="header_per_change">Simple Details</string>
    <string name="action_login">Login</string>
    <string name="hint_login">Login username</string>
    <string name="header_login">Application Login</string>

    <string name="enter_share">Enter the share name</string>

    <string name="notify_price">Trigger price: </string>
    <string name="number_of_shares">No. of Shares:</string>
    <string name="current_value">Current value:</string>
    <string name="dialog_trigger_price">Enter the Trigger Price</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="delete">Delete</string>


</resources>
