<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/heading1"
        android:text="@string/header_price"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

    <EditText
        android:id="@+id/edtTxtPrice"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/txtViewPrice"
        />

    <LinearLayout
        android:layout_below="@+id/txtViewPrice"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>