<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

<RelativeLayout
    android:id="@+id/addRemoveContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgViewAddShare"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_add"/>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/inputShareDetailContainer"
        android:layout_below="@+id/imgViewAddShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/getShareNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtViewShareSymbol"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:text="@string/enter_share"
                />

            <EditText
                android:layout_toRightOf="@+id/txtViewShareSymbol"
                android:maxLength="17"
                android:id="@+id/edtTxtShareSymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/getShareNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btnAddShare"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_share"
                />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>


    <RelativeLayout
        android:layout_below="@+id/addRemoveContainer"
        android:id="@+id/listHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_company"
            />

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_price"
            />

        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_per_change"
            />

    </RelativeLayout>

     <ListView
         style="@style/dividedListStyle"
         android:layout_below="@+id/listHeader"
         android:id="@+id/stockList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>



</RelativeLayout>